Fixed some codes and updated price quote from PancakeSwap pool pair.

--- a/explorer.ini
+++ b/explorer.ini
@@ -1,16 +1,16 @@
 [My Explorer]
 ; Alternative display currency on front page of explorer
-altcurrency = GBP
+altcurrency = EUR
 nodeport = 5658
 nodeip = 127.0.0.1
 ssl = false
 ; Path to private key location and filename
-keypath = /home/user/private.key
+keypath = /home/lama2/private.key
 ; Path to certificate location and filename
-crtpath = /home/user/cert.crt
-dbroot = /home/user/Bismuth/static/
-bisroot = /home/user/Bismuth/static/ledger.db
-hyperroot = /home/user/Bismuth/static/hyper.db
+crtpath = /home/lama2/cert.crt
+dbroot = /home/lama2/mnt5/Bismuth/static/
+bisroot = /home/lama2/mnt5/Bismuth/static/ledger.db
+hyperroot = /home/lama2/mnt5/Bismuth/static/hyper.db
 maxdisplay = 1000
 diff_ch = 75
 block_ch = 150
@@ -20,5 +20,5 @@ secret = 3d6f45a5fc12445dbac2f59c3b6c7cb1
 webport = 5000
 logging = info
 devmode = false
-do_ledger = false
-do_quicksearch = false
+do_ledger = true
+do_quicksearch = true
